--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
     </video>
     <video>
       <source src="https://" type="video/"> tam kad palaikytu ir telefone tai reikia kitokio formato.
-      <source src="https://" type="video/">   
+      <source src="https://youtu.be/tntOCGkgt98" type="video/">   
     </video>
   </body>
 </html>
