--- a/namu darbai/14.html
+++ b/namu darbai/14.html
@@ -2,16 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style11.css">
+    <link rel="stylesheet" href="css/style14.css">
     <title>14</title>
   </head>
   <body>
-    <title>Shop</title>
-  </head>
-  <body>
     <header>
-      <h1>Shop</h1>
-    </header>
+      <h1><i>the</i><br /><strong> best shop</strong></h1>
       <nav class="menu">
             <ul>
               <li><a href="#">home</a></li>
@@ -20,12 +16,22 @@
               <li><a href="#">contacts</a></li>
             </ul>
       </nav>
-      <section>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-      </section>
+      </header>
+        <div class="images">
+            <div class="row">
+              <div class="col-4">
+                <img src="img/1.jpg" alt="">
+              </div>
+              <div class="col-4">
+                <img src="img/2.jpg" alt="">
+              </div>
+              <div class="col-4">
+                <img src="img/3.jpg" alt="">
+              </div>
+          </div>
+        </div>
       <footer>
+        Snap up the latest trend-led styles in the Dresslink Sale.From vintage party dress to plaid button down shirt,shop now for super savings online.
       </footer>
   </body>
 </html>
